MET-6342 Sonar issues